support for restaurant stats
